# rust-trade-btc

./: .env  .gitignore  Cargo.toml  LOGGING.md  README.md  simulation_state.json
src/: decision_engine.rs  llm_client.rs  main.rs  market_analysis.rs  reader_csv.rs  redis_client.rs  trade_btc.rs
